--- a/src/web/index.html
+++ b/src/web/index.html
@@ -10,6 +10,7 @@
     <h1>Reversi Puzzle</h1>
     <div class="game-info">
         <p>Moves Left: <span id="moves-left">--</span></p>
+        <button id="undo-button">Undo</button>
         <p id="game-message"></p>
     </div>
     <div id="board-container"></div>
