--- a/src/web/index.html
+++ b/src/web/index.html
@@ -11,7 +11,10 @@
     <div class="game-info">
         <p>Moves Left: <span id="moves-left">--</span></p>
         <button id="undo-button">Undo</button>
+        <button id="show-solution-button">Show Solution</button>
         <p id="game-message"></p>
+        <p id="seed-display"></p>
+        <p id="solution-display"></p>
     </div>
     <div id="board-container"></div>
 
